--- a/README
+++ b/README
@@ -1,5 +1,1 @@
-Hier sammle ich nützliche Bash-Skripts.
-Insbesondere solche, welche da arbeiten auf der Bash erleichtern. Eion strenge
-Trennung gibt es jedoch noch nicht.
-
-Betrachtet es als unter GPLv3 lizensiert.
+Konfigurationen und nützliche Skripts zum bequemen arbeiten auf der Konsole.
