--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Konfigurationen und nützliche Skripts zum bequemen arbeiten auf der Konsole.
+Konfigurationen und nützliche Scripte zum bequemen arbeiten auf der Konsole.
